--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,33 +60,20 @@ jobs:
             exit 1
           fi
 
+      - name: Run golangci-lint
+        run: |
+          echo "Running golangci-lint comprehensive checks..."
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+          golangci-lint run
+
       - name: Cleanup
         if: always()
         run: go clean -cache -testcache -modcache
 
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    needs: [quality]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: stable
-
-      - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: latest
-          install-mode: goinstall
-
   test:
     name: Test
     runs-on: ubuntu-latest
-    needs: [quality]
+    needs: quality
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -115,7 +102,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    needs: [quality, lint, test]
+    needs: [quality, test]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
