--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   quality:
-    name: Quality Checks (Go Report Card)
+    name: Code quality checks
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
