--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
     branches: [main]
 
 jobs:
-  lint:
-    name: Lint
+  quality:
+    name: Code quality checks
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -17,17 +17,63 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: stable
+          go-version: '1.26.0'
+
+      - name: Install quality check tools
+        run: |
+          go install honnef.co/go/tools/cmd/staticcheck@latest
+          go install github.com/gordonklaus/ineffassign@latest
+          go install github.com/client9/misspell/cmd/misspell@latest
+          go install github.com/kisielk/errcheck@latest
+          go install github.com/fzipp/gocyclo/cmd/gocyclo@latest
+
+      - name: Run gofmt -s (simplify)
+        run: |
+          output=$(gofmt -s -l .)
+          if [ -n "$output" ]; then
+            echo "The following files are not formatted with gofmt -s:"
+            echo "$output"
+            exit 1
+          fi
+
+      - name: Run go vet
+        run: go vet ./...
+
+      - name: Run staticcheck
+        run: staticcheck ./...
+
+      - name: Run ineffassign
+        run: ineffassign ./...
+
+      - name: Run misspell
+        run: misspell -error .
+
+      - name: Run errcheck
+        run: errcheck ./...
+
+      - name: "Run gocyclo (threshold: 15)"
+        run: |
+          output=$(gocyclo -over 15 .)
+          if [ -n "$output" ]; then
+            echo "The following functions have cyclomatic complexity over 15:"
+            echo "$output"
+            exit 1
+          fi
 
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: latest
-          install-mode: goinstall
+        run: |
+          echo "Running golangci-lint comprehensive checks..."
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+          golangci-lint run
+
+      - name: Cleanup
+        if: always()
+        run: go clean -cache -testcache -modcache
 
   test:
     name: Test
     runs-on: ubuntu-latest
+    needs: quality
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -35,7 +81,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: stable
+          go-version: '1.26.0'
 
       - name: Download dependencies
         run: go mod download
@@ -56,7 +102,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    needs: [lint, test]
+    needs: [quality, test]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -64,7 +110,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: stable
+          go-version: '1.26.0'
 
       - name: Build verification
         run: go build -v ./...
